# manifesto-engine

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  activate.sh  bootstrap-manifesto.sh  honda-build-fixes.md  manifesto  pyproject.toml  requirements.txt  tmp.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: task-blocked.md  task-completion.md  verification-failed.md
.github/workflows/: test.yml
docs/: AGENT_ROLES.md
docs/_MANIFESTO/: README.md  manifesto.yaml  manifesto.yaml.backup-20250617-133942
docs/_MANIFESTO/tasks/: TASK-001.yaml  TASK-001_proof.json  TASK-002.yaml  TASK-003.yaml  TASK-003_proof.json  TASK-004.yaml  TASK-005.yaml  TASK-005_proof.json  TASK-006.yaml  TASK-007.yaml  TASK-008.yaml  TASK-999_proof.json
examples/: simple-manifesto.yaml
src/manifesto/: __init__.py  __main__.py
src/manifesto/core/: injector.py  markdown_parser.py  prompt_generator.py  task_loader.py  task_parser.py  validator.py
src/manifesto/orchestrate/: __init__.py  planner.py
src/manifesto/prompts/: plan_template.md  supervisor_prompt.md  worker_prompt.md
src/manifesto/templates/: manifesto.yaml.j2  supervisor_prompt.md  supervisor_review.md  worker_prompt.md  workflow_example.md
src/manifesto/verify/: base.py  swift.py
tests/: __init__.py  test_manifesto.py  test_task_loader.py
